# financial-10k-agentic-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: 10k_targets.csv  download_10k_files.py  reindex.py  start_ollama.sh  test_semantic_query.sh
src/: config.py
src/ingestion/: __init__.py  chunker.py  embedder.py  html_parser.py  metadata.py  parallel.py  pipeline.py
src/llm/: __init__.py  factory.py
src/queue/: __init__.py  connection.py  tasks.py  worker.py
src/store/: __init__.py  qdrant_local.py
src/task_queue/: __init__.py  tasks.py  worker.py
